--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.5.2",
+    "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.473.0",
+    "pnpm": "^9.15.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-editor-js": "^2.1.0",
